
FEATURES
*

BUG FIXES and IMPROVEMENTS
* Enable JS function literals (wrapped in `htmlwidgets::JS()`) to be included in arguments to methods invoked on `leafletProxy` objects. (JS function literals could already be included with methods invoked on `leaflet` objects, so this change just brings `leafletProxy` to parity.) (#420)

* Add missing CSS rule to show `<img>` in right-pane and left-pane (rstudio/rmarkdown/issues#1949).

leaflet 2.0.4.1
--------------------------------------------------------------------------------

FEATURES
* Updated proj4.js to 2.6.2

BUG FIXES and IMPROVEMENTS
* Minor tweaks to example data and tests, required to stay on CRAN



leaflet 2.0.3
--------------------------------------------------------------------------------

BREAKING CHANGES
* `data("providers")` and `data("providers.details")` no longer exist. Please use `leaflet::providers` and `leaflet::providers.details`. (#636)

BUG FIXES and IMPROVEMENTS
* Integrated data from `leaflet.providers` package. See [leaflet.providers](https://rstudio.github.io/leaflet.providers/) for details. (#636)
* Fixed [rstudio/crosstalk#58](https://github.com/rstudio/crosstalk/issues/58), which caused Leaflet maps that used Crosstalk shared data in Shiny apps, to be redrawn at incorrect times.
* invokeRemote() now resolves html dependencies before passing them to shiny::createWebDependency() (#620).
* Upgrade leaflet-provider to 1.4.0, enable more map variants such as CartoDB.Voyager (#567)
* `sf` objects with `names` attributes in the `st_geometry` now visualise correctly (#595)
* GeoJSON objects missing `properties` can now be displayed (#622)



leaflet 2.0.2
--------------------------------------------------------------------------------

BUG FIXES and IMPROVEMENTS
* Require viridis >= 0.5.1 to avoid namespace issues with viridisLite (#557)
* Fixed broken mouse events after using leaflet-search from leaflet.extras within shiny applications (#563)